fixed left vav to collapse other heirarchies when expanding a new one

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .nonav {
-	display:none;
+	display:none !important;
 }
 
 body {
